--- a/force-app/main/default/aura/CustomLookUpForPI/CustomLookUpForPI.cmp
+++ b/force-app/main/default/aura/CustomLookUpForPI/CustomLookUpForPI.cmp
@@ -10,6 +10,9 @@
     <aura:attribute name="label" type="string" default=""/>
     <aura:attribute name="Message" type="String" default=""/>
     <aura:attribute name="cls" type="string" default="slds-hide" />
+    <aura:attribute name="mainwrap" type="List"  />
+    <aura:attribute name="eventObject" type="string"/>
+    
     
     <!--declare events hendlers-->  
     <aura:handler name="oSelectedRecordEvent" event="c:selectedObjectRecordEvent" action="{!c.handleComponentEvent}"/>
@@ -18,7 +21,7 @@
     <!-- https://www.lightningdesignsystem.com/components/lookups/ --> 
     
     <div aura:id="searchRes" class="slds-form-element slds-lookup slds-is-close" data-select="single">
-        <label class="slds-form-element__label" for="lookup-348">{!v.label}</label>
+        <!--<label class="slds-form-element__label" for="lookup-348">{!v.label}</label>-->
         <!--This part is for display search bar for lookup-->  
         <div class="slds-form-element__control">
             
