--- a/force-app/main/default/aura/Salesorderlineitemcomponent/Salesorderlineitemcomponent.css
+++ b/force-app/main/default/aura/Salesorderlineitemcomponent/Salesorderlineitemcomponent.css
@@ -24,3 +24,11 @@
 .THIS label.uiLabel {
     display :none !important;
 }
+.THIS.exampleHolder{
+    position: relative;
+    display: inline-block;
+    margin-left: 15px;
+    width: 55px;
+    vertical-align: middle;
+    white-space: nowrap;
+}
