--- a/force-app/main/default/pages/SaleOrderAcknowledgement.page
+++ b/force-app/main/default/pages/SaleOrderAcknowledgement.page
@@ -592,8 +592,11 @@
                     <td style="text-align:right"><apex:outputText value="{!objSOI.objSOLI.Quantity__c}" /></td>
                     <td style="text-align:right"><apex:outputText value="{!objSOI.objSOLI.Product_Part__r.UOM__c}" /></td>
                     <td>
-                        <apex:outputText value="{!objSOI.objSOLI.Available_Quantity__c}" rendered="{!If((objSOI.objSOLI.Available_Quantity__c != null)&&(objSOI.objSOLI.Available_Quantity__c < objSOI.objSOLI.Quantity__c), true, false)}"/>
+                        <!--<apex:outputText value="{!objSOI.objSOLI.Available_Quantity__c}" rendered="{!If((objSOI.objSOLI.Available_Quantity__c != null)&&(objSOI.objSOLI.Available_Quantity__c < objSOI.objSOLI.Quantity__c), true, false)}"/>
                         <apex:outputText value="Yes" rendered="{!If((objSOI.objSOLI.Available_Quantity__c != null) && (objSOI.objSOLI.Available_Quantity__c == objSOI.objSOLI.Quantity__c), true, false)}"/>
+                    -->
+						 <apex:outputText value="{!If(objSOI.isAvailable == true,'Yes','No')}" />
+                                            
                     </td>
                     <td>
                         <apex:outputText value="{0, date, dd - MMM - yyyy}">
