--- a/force-app/main/default/aura/UpdatePackingList/UpdatePackingList.cmp
+++ b/force-app/main/default/aura/UpdatePackingList/UpdatePackingList.cmp
@@ -14,6 +14,7 @@
     <aura:attribute name="SuccessMessage" type="String" default=""/>
     <aura:attribute name="totalprice" type="string" default=""/>
     <aura:attribute name="isErrorRow" type="boolean" default="false"/>
+    <aura:attribute name="isSelectAll" type="boolean" default="true"/>
     <aura:html tag="style">
         .cuf-content {
         padding: 0 0rem !important;
@@ -40,8 +41,8 @@
                         <table class="slds-table slds-table--bordered slds-table_striped slds-table--cell-buffer slds-max-medium-table--stacked-horizontal slds-table--header-fixed" style="table-layout:fixed">
                             <thead>
                                 <tr class="slds-line-height_reset">
-                                    <th class="" scope="col" style="width: 1rem; text-align:center;">
-                                        <div class="slds-truncate slds-cell-wrap" title="checkbox"></div>
+                                    <th class="" scope="col" style="width: 1rem; ">
+                                        <div class="slds-truncate slds-cell-wrap" title="checkbox"><lightning:input type="checkbox" value="{!v.isSelectAll}" checked="{!v.isSelectAll}" onchange="{!c.checkall}"/></div>
                                     </th>
                                     <th class="" scope="col" style="width: 3rem; text-align:center;">
                                         <div class="slds-truncate slds-cell-wrap" title="Product Number">Product Number</div>
@@ -85,7 +86,7 @@
                             <tbody>
                                 <aura:iteration items="{!v.wrapMain.inrWrap}" var="cusProd">
                                     <tr width="100%">
-                                        <td class="dataCell" style="width: 8rem; text-align:center;" ><lightning:input type="checkbox" value="{!cusProd.isSelected}" checked="{!cusProd.isSelected}" onchange="{!c.checkJs}"/></td>
+                                        <td class="dataCell" style="width: 8rem; " ><lightning:input type="checkbox" value="{!cusProd.isSelected}" checked="{!cusProd.isSelected}" onchange="{!c.checkJs}"/></td>
                                         <td class="dataCell" style="width: 8rem; text-align:center;"><a href="{! '/' + cusProd.partid}"> {!cusProd.partnum}</a></td>
                                         <td class="dataCell" style="width: 9rem; text-align:center;">{!cusProd.partname}</td>
                                         <td class="dataCell" style="width: 7rem; text-align:center;">{!cusProd.quantity}</td>
