--- a/force-app/main/default/pages/SalesOrderReturn_Pdf.page
+++ b/force-app/main/default/pages/SalesOrderReturn_Pdf.page
@@ -103,7 +103,7 @@
         </div>
         <body>
             <div style="text-align:center;font-size:20px">
-            <b >SALE RETURN CUM CREDIT NOTE</b>
+            <b >SALE RETURN</b>
             </div>
             
             <table width="100%" style="border:none">
@@ -125,11 +125,12 @@
                 <tr>
                   
                     <td style="width: 50%; text-align: left;border:none">
-                        <apex:outputText value="{!Sales_Order_Return__c.Customer_Party__r.ShippingStreet }" />&nbsp;,&nbsp;
+                       <!-- <apex:outputText value="{!Sales_Order_Return__c.Customer_Party__r.ShippingStreet }" />&nbsp;,&nbsp;
                         <apex:outputText value="{!Sales_Order_Return__c.Customer_Party__r.ShippingCity }" />&nbsp;,&nbsp;
                         <apex:outputText value="{!Sales_Order_Return__c.Customer_Party__r.ShippingState }" />&nbsp;,&nbsp;
                         <apex:outputText value="{!Sales_Order_Return__c.Customer_Party__r.ShippingPostalCode }" />&nbsp;,&nbsp;
-                        <apex:outputText value="{!Sales_Order_Return__c.Customer_Party__r.ShippingCountry}" />
+                        <apex:outputText value="{!Sales_Order_Return__c.Customer_Party__r.ShippingCountry}" />-->
+                        <apex:outputText value="{!Sales_Order_Return__c.Shipping_Address_Formula__c}" escape="false"/>
                     </td>
                     <td style="width: 18%; text-align: left;border:none">
                         <b>Date</b>
@@ -152,7 +153,7 @@
                     </td>
                     <td style="width: 2%; text-align: left;border:none"><b>:</b>
                     </td>
-                    <td style="width: 30%; text-align: left;border:none"><apex:outputText value="Not Mapped" />
+                    <td style="width: 30%; text-align: left;border:none"><apex:outputText value="{!Sales_Order_Return__c.CST_No__c}" />
                     </td>
                 </tr>
                 <tr>
@@ -161,7 +162,7 @@
                     </td>
                     <td style="width: 2%; text-align: left;border:none"><b>:</b>
                     </td>
-                    <td style="width: 30%; text-align: left;border:none"><apex:outputText value="Not Mapped" />
+                    <td style="width: 30%; text-align: left;border:none"><apex:outputText value="{!Sales_Order_Return__c.VAT_TIN_No__c}" />
                     </td>
                 </tr>
                 
@@ -177,11 +178,11 @@
                     <td style="width: 50%; text-align: left;border:none"></td>
                 </tr>
                 <tr>              
-                    <td style="width: 20%; text-align: left;border:none" ><apex:outputText value="{!Sales_Order_Return__c.Bill_To_Customer_Name__r.name}" />
+                    <td style="width: 20%; text-align: left;border:none" ><apex:outputText value="{!con.name}" />
                     </td>
-                    <td style="width: 12%; text-align: Center;border:none"><apex:outputText value="{!Sales_Order_Return__c.Bill_To_Customer_Name__r.Mobilephone}" />
+                    <td style="width: 12%; text-align: Center;border:none"><apex:outputText value="{!con.Mobilephone}" />
                     </td>
-                    <td style="width: 18%; text-align: left;border:none"><apex:outputText value="{!Sales_Order_Return__c.Bill_To_Customer_Name__r.Email}" />
+                    <td style="width: 18%; text-align: left;border:none"><apex:outputText value="{!con.Email}" />
                     </td>
                     <td style="width: 50%; text-align: left;border:none"></td>
                 </tr>
@@ -194,7 +195,10 @@
                     </td>
                     <td style="width: 2%; text-align: left;border:none"><b>:</b>
                     </td>
-                    <td style="width: 30%; text-align: left;border:none"><apex:outputText value="Not Mapped" />
+                    <td style="width: 30%; text-align: left;border:none"><apex:outputText value="{!Sales_Order_Return__c.MRN__r.E_Way_Bill_No__c}" />&nbsp; <b>Dated</b> &nbsp;
+                        <apex:outputText value="{0, date, dd - MMM - yyyy}">
+                            <apex:param value="{!Sales_Order_Return__c.MRN__r.E_Way_Bill_Date__c}" />
+                        </apex:outputText> 
                     </td>
                     
                     <td style="width: 18%; text-align: left;border:none"><b>Mode of Transport</b>
@@ -210,7 +214,7 @@
                     </td>
                     <td style="width: 2%; text-align: left;border:none"><b>:</b>
                     </td>
-                    <td style="width: 30%; text-align: left;border:none"><apex:outputText value="{!Sales_Order_Return__c.Reference_No__c}" />&nbsp; dated &nbsp;
+                    <td style="width: 30%; text-align: left;border:none"><apex:outputText value="{!Sales_Order_Return__c.Reference_No__c}" />&nbsp; <b>Dated</b> &nbsp;
                         <apex:outputText value="{0, date, dd - MMM - yyyy}">
                             <apex:param value="{!Sales_Order_Return__c.Reference_Date__c}" />
                         </apex:outputText> 
@@ -321,12 +325,12 @@
                         <tr>
                             <td style="border:none"><apex:outputText value="{!index}" />
                             <apex:variable value="{!index + 1}" var="index" /></td>
-                            <td style="border:none"><apex:outputText value="{!dli.Part_Number__r.name}" /></td>
-                            <td style="border:none"><apex:outputText value="{!dli.Part_Number__r.Part_Name__c}" /></td>
-                            <td style="text-align:right;border:none"><apex:outputText value="{!dli.Quantity__c}" /></td>
-                            <td style="text-align:right;border:none"><apex:outputText value="{!dli.Part_Number__r.UOM__c}" /></td>
-                            <td style="text-align:right;border:none"><apex:outputText value="{!dli.Unit_Price__c}" /></td>
-                            <td style="text-align:right;border:none"><apex:outputText value="{!dli.Net_Amount__c}" /></td>
+                            <td style="text-align:center;border:none"><apex:outputText value="{!dli.Part_Number__r.name}" /></td>
+                            <td style="text-align:center;border:none"><apex:outputText value="{!dli.Part_Number__r.Part_Name__c}" /></td>
+                            <td style="text-align:center;border:none"><apex:outputText value="{!dli.Quantity__c}" /></td>
+                            <td style="text-align:center;border:none"><apex:outputText value="{!dli.Part_Number__r.UOM__c}" /></td>
+                            <td style="text-align:center;border:none"><apex:outputText value="{!dli.Unit_Price__c}" /></td>
+                            <td style="text-align:center;border:none"><apex:outputText value="{!dli.Net_Amount__c}" /></td>
                         </tr>
                     </apex:repeat> 
             </table>
