--- a/force-app/main/default/pages/ServiceInvoicePDF.page
+++ b/force-app/main/default/pages/ServiceInvoicePDF.page
@@ -107,7 +107,7 @@
                     <td style="border:none;" width="25%" valign="top" rowspan="3">
                     </td>
                     <td style="border:none;font-size:15px;" width="50%" valign="top" rowspan="3" >
-                        <center><b><apex:outputText value="TAX INVOICE" /></b></center>
+                        <center><b><apex:outputText value=" SERVICE INVOICE" /></b></center>
                     </td>
                     <td width="3%"><br/></td>
                     <td style="border:none;" width="22%" valign="top">
@@ -279,7 +279,7 @@
                         <center><apex:outputText value=":" /></center>
                     </td>
                     <td style="border:none;" width="20%" valign="top">
-                        <apex:outputText value="{!objInvoice.Place_of_Supply__c}" /> 
+                        <apex:outputText value="{!Invoice__c.Shipping_State_Province__c}" /> 
                     </td>
                     <td style="border:none;" width="10%" valign="top"></td>
                 </tr>
@@ -385,7 +385,7 @@
                         <b><apex:outputText value=":" /></b>
                     </td>
                     <td style="border:none;border-top: 2px solid black;"  valign="top" colspan="2">
-                        <apex:outputText value="{!objInvoice.Customer_Name__r.Name}" />
+                        <apex:outputText value="{!Invoice__c.shipping_Account__r.Name}" />
                     </td>
                 </tr>
                 <tr>
@@ -432,7 +432,7 @@
                         <center><apex:outputText value=":" /></center>
                     </td>
                     <td style="border:none;"  valign="top" colspan="2">
-                        <apex:outputText value="{!objInvoice.Shipping_GSTIN_No__c}" /> 
+                        <apex:outputText value="{!Invoice__c.Shipping_Account__r.Shipping_GSTIN_No__c}" /> 
                     </td>
                 </tr>
                 <tr>
@@ -457,11 +457,11 @@
                         <center><apex:outputText value=":" /></center>
                     </td>
                     <td style="border:none;"  valign="top">
-                        <apex:outputText value="{!objInvoice.Shipping_State_Country__c}" /> 
+                        <apex:outputText value="{!Invoice__c.Shipping_State_Province__c}" /> 
                     </td>
                     <td style="border:none;border-top: 2px solid black;border-left: 2px solid black;"  valign="top">
                          <b><apex:outputText value="State Code :" /></b> 
-                         <apex:outputText value="{!objInvoice.Shipping_State_Code__c}" />
+                         <apex:outputText value="{!Invoice__c.shipping_Account__r.Shipping_State_Code__c}" />
                     </td> 
                 </tr>
             </table>
